--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,21 @@
 ---------- Progress ----------
 Entities: 0/? (0%)
-Weapons: ?/? (?%)
-Tools: ?/? (?%)
-Armor: 4/? (?%)
+Weapons: 18/216 (8%)
+Tools: 36/50 (72%)
+Armor: 4/48 (8%)
 Food: 0/? (0%)
+Gear: 0/90 (0%)
 Valuables: 12/? (?%)
+Common Magic Items: 0/3 (0%)
+Uncommon Magic Items: 0/100 (0%)
+Rare Magic Items: 0/104 (0%)
+Very Rare Magic Items: 0/67 (0%)
+Legendary Magic Items: 0/49 (0%)
+Artifacts: 0/7 (0%)
 Blocks: 11/? (?%)
 Classes: 0/12 (0%)
 Races: 0/9 (0%)
+Effects: 0/? (0%)
 Total: 27/? (?%)
 
 ----- Materials -----
